<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/registerId"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        ></androidx.appcompat.widget.Toolbar>

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:src="@drawable/logo"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true"
        android:layout_marginTop="20dp">


        <EditText
            android:id="@+id/signUpNameET"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/sign_up_name_hint"
            android:textColor="@color/colorAccent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/signUpEmailET"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorAccent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="10dp"
        >

        <EditText
            android:id="@+id/signUpPasswordET"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:ems="10"
            android:hint="@string/login_pass_hint"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        android:layout_marginTop="20dp"
        >

        <EditText
            android:id="@+id/confPasswordET"
            android:layout_width="380dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/sign_up_confirm_pass"
            android:inputType="textPassword"
            android:textColor="@color/colorAccent" />

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/registerBtn"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/register_btn"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        />


</LinearLayout>